# keiro

./: .gitignore  CHANGELOG.md  Justfile  LICENSE  README.md  cabal.project  flake.nix  keiro.cabal  mina.kdl  mori.automation.dhall  mori.dhall  package.json  pnpm-lock.yaml  process-compose.yaml
benchmarks/message-db-vs-kiroku/: message-db-vs-kiroku.cabal
benchmarks/message-db-vs-kiroku/app/: Main.hs
jitsurei/: jitsurei.cabal
jitsurei/app/: DiagramsMain.hs  Main.hs
jitsurei/src/: Jitsurei.hs
jitsurei/src/Jitsurei/: AgentQualRouter.hs  Database.hs  Diagrams.hs  Domain.hs  DurableWorkflow.hs  EscalationProcess.hs  FulfillmentProcess.hs  Incident.hs  OncallRoster.hs  OrderStream.hs  Paging.hs  ReadModels.hs  ReplayAudit.hs  Snapshots.hs  Timers.hs
jitsurei/test/: Main.hs
keiro/: CHANGELOG.md  README.md  keiro.cabal
keiro-core/: CHANGELOG.md  keiro-core.cabal
keiro-core/src/Keiro/: Codec.hs  EventStream.hs  Prelude.hs  Schema.hs  Stream.hs
keiro-dsl/: CHANGELOG.md  keiro-dsl.cabal
keiro-dsl/app/: Main.hs
keiro-dsl/test/: Main.hs  diff-test.sh  mutation-test.sh  process-mutation-test.sh  router-mutation-test.sh  workflow-mutation-test.sh
keiro-dsl/test/conformance/: Main.hs
keiro-dsl/test/conformance-coldstart/: Main.hs
keiro-dsl/test/conformance-contract/: Main.hs
keiro-dsl/test/conformance-dispatch-full/: Main.hs
keiro-dsl/test/conformance-intake-full/: Main.hs
keiro-dsl/test/conformance-intake-runtime/: Main.hs
keiro-dsl/test/conformance-newsurface/: Main.hs  keiro-dsl-manifest.transfer-routing.txt  keiro-dsl-scaffold-record.transfer-routing.txt
keiro-dsl/test/conformance-process/: Main.hs
keiro-dsl/test/conformance-process-full/: Main.hs
keiro-dsl/test/conformance-process-runtime/: Main.hs
keiro-dsl/test/conformance-publisher-runtime/: Main.hs
keiro-dsl/test/conformance-queue/: Main.hs
keiro-dsl/test/conformance-queue-runtime/: Main.hs
keiro-dsl/test/conformance-readmodel-runtime/: Main.hs
keiro-dsl/test/conformance-router/: Main.hs
keiro-dsl/test/conformance-router-full/: Main.hs
keiro-dsl/test/conformance-router-runtime/: Main.hs
keiro-dsl/test/conformance-skeletons/: Main.hs
keiro-dsl/test/conformance-snapshot/: Main.hs
keiro-dsl/test/conformance-v2/: Main.hs
keiro-dsl/test/conformance-workflow/: Main.hs
keiro-dsl/test/conformance-workflow-full/: Main.hs
keiro-dsl/test/conformance-workflow-runtime/: Main.hs
keiro-dsl/test/fixtures/: aggregate-bad-refs.keiro  contract-bump-fieldadd.keiro  contract-discriminator.keiro  contract-eventadd.keiro  contract-eventdrop.keiro  contract-fieldadd.keiro  contract-fieldtype.keiro  contract-topic.keiro  contract.kdsl  dispatch-dedup-bad-field.keiro  dispatch-dedup-ghost-queue.keiro  duplicate-names.keiro  emit-badevent.kdsl  emit-derive.keiro  emit-mapchange.keiro  emit-noskip.keiro  emit-ordering.keiro  emit-outboxfield.keiro  emit-topic-mismatch.keiro  hospital-surge-badref.keiro  hospital-surge-clock.kdsl  hospital-surge-clock.keiro  hospital-surge-dispatchid.keiro  hospital-surge-handle.keiro  hospital-surge-inputtype.keiro  hospital-surge-payload.keiro  hospital-surge-procname.keiro  hospital-surge-timerid.keiro  hospital-surge-window.keiro  hospital-surge.kdsl  hospital-surge.keiro  intake-decode.keiro  intake-dedupekey.keiro  intake-dedupepolicy.keiro  intake-dup-retry.keiro  intake-dup-row.keiro  intake-incomplete.keiro  intake-pf-retry.kdsl  intake-topic-mismatch.keiro  intake.keiro  (+98 more)
keiro-migrations/: CHANGELOG.md  README.md  keiro-migrations.cabal
keiro-migrations/app/: Main.hs  WriteExpectedSchema.hs
keiro-migrations/expected-schema/native/: keiro-v18.txt
keiro-migrations/expected-schema/v18/: db-settings
keiro-migrations/ledger-fixups/: 2026-07-05-realign-keiro-migration-timestamps.sql
keiro-migrations/migrations/: 0001-keiro-bootstrap.sql  0002-keiro-outbox.sql  0003-keiro-inbox.sql  0004-keiro-timer-recovery.sql  0005-keiro-workflow-steps.sql  0009-keiro-subscription-shards.sql  0010-keiro-messaging-crash-recovery.sql  0012-keiro-workflow-gc-index.sql  0014-keiro-projection-dedup.sql  0017-schema-management-comment.sql  0018.sql  0019-keiro-snapshots-state-shape-hash.sql  0020-keiro-workflow-children-failure-reason.sql  manifest
keiro-migrations/remediation/: 2026-07-05-relocate-keiro-tables-to-keiro-schema.sql
keiro-migrations/sql-migrations/: 2026-05-17-00-00-00-keiro-bootstrap.sql  2026-05-17-01-00-00-keiro-outbox.sql  2026-05-17-02-00-00-keiro-inbox.sql  2026-05-17-03-00-00-keiro-timer-recovery.sql  2026-05-17-13-58-15-keiro-bootstrap.sql  2026-05-19-00-00-00-keiro-inbox-worker.sql  2026-06-03-00-00-00-keiro-workflow-steps.sql  2026-06-03-01-00-00-keiro-awakeables.sql  2026-06-03-02-00-00-keiro-workflow-children.sql  2026-06-03-18-19-41-keiro-awakeables.sql  2026-06-03-19-49-23-keiro-workflow-children.sql  2026-06-04-02-12-28-keiro-workflow-generation.sql  2026-06-05-01-00-00-keiro-subscription-shards.sql  2026-06-15-13-22-31-keiro-messaging-crash-recovery.sql  2026-06-15-15-07-25-keiro-workflows-instances.sql  2026-06-15-18-01-33-keiro-workflows-wake-after.sql  2026-06-15-21-49-37-keiro-projection-dedup.sql  2026-06-15-22-10-00-keiro-workflow-gc-index.sql  2026-07-02-00-15-48-keiro-outbox-claim-order-index.sql  2026-07-02-00-58-54-keiro-inbox-drop-received-idx.sql
keiro-migrations/src/Keiro/: Migrations.hs
keiro-migrations/test/: Lint.hs  Main.hs
keiro-migrations/test-legacy/: Main.hs
keiro-pgmq/: CHANGELOG.md  keiro-pgmq.cabal
keiro-pgmq/src/Keiro/: PGMQ.hs
keiro-pgmq/test/: Main.hs
keiro-test-support/: keiro-test-support.cabal
keiro/bench/: Main.hs  baseline-inbox.csv  baseline-outbox.csv
keiro/src/: Keiro.hs
keiro/src/Keiro/: Command.hs  Connection.hs  DeadLetter.hs  Inbox.hs  Outbox.hs  ProcessManager.hs  Projection.hs  ReadModel.hs  ReplayAudit.hs  ReplayDigest.hs  Router.hs  Snapshot.hs  Timer.hs  (+3 more)
keiro/test/: Main.hs  ReplaySafetyTypeProbe.hs
spikes/codec/: .gitignore  cabal.project  spike.cabal
spikes/command-cycle/: cabal.project  spike.cabal
spikes/read-model/: cabal.project  spike.cabal  transcript.txt
(+578 files in other folders)
