cabal-version:      3.0
name:               keiro
version:            0.1.0.0
synopsis:           Event sourcing framework and workflow engine
description:
    A library that composes kiroku, keiki, and shibuya into an
    event-sourcing and workflow-orchestration framework.
license:            BSD-3-Clause
author:             Nadeem Bitar
maintainer:         nadeem@gmail.com
copyright:          2026 Nadeem Bitar
category:           Control
build-type:         Simple
tested-with:        GHC == 9.12.*
extra-doc-files:    README.md

common warnings
    ghc-options:        -Wall -Wcompat -Widentities
                        -Wincomplete-record-updates -Wincomplete-uni-patterns
                        -Wpartial-fields -Wredundant-constraints

common shared
    default-language:   GHC2024
    default-extensions: DeriveAnyClass
                        DuplicateRecordFields
                        OverloadedLabels
                        OverloadedStrings
                        PackageImports

library
    import:             warnings, shared
    exposed-modules:    Keiro
                        Keiro.Command
                        Keiro.Codec
                        Keiro.EventStream
                        Keiro.Prelude
                        Keiro.Stream
    hs-source-dirs:     src
    build-depends:      aeson >= 2.2,
                        aeson-casing >= 0.2,
                        base >= 4.21 && < 5,
                        effectful >= 2.6,
                        effectful-core >= 2.6,
                        generic-lens >= 2.2,
                        hasql >= 1.10,
                        hasql-pool >= 1.2,
                        hasql-transaction >= 1.1,
                        keiki >= 0.1,
                        keiki-codec-json >= 0.1,
                        kiroku-store >= 0.1,
                        lens >= 5.2,
                        scientific >= 0.3,
                        shibuya-core >= 0.5,
                        streamly >= 0.11,
                        streamly-core >= 0.3,
                        text >= 2.1,
                        time >= 1.12,
                        uuid >= 1.3,
                        vector >= 0.13

test-suite keiro-test
    import:             warnings, shared
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base >= 4.21 && < 5,
                        aeson >= 2.2,
                        ephemeral-pg >= 0.2,
                        hasql-transaction >= 1.1,
                        hspec >= 2.11,
                        keiki,
                        keiro,
                        kiroku-store,
                        text >= 2.1,
                        time >= 1.12,
                        uuid >= 1.3,
                        vector >= 0.13
