cabal-version:      3.0
name:               jitsurei
version:            0.1.0.0
synopsis:           Guide-backed worked examples for keiro
description:
    Real, compiling examples that back the long-form Keiro guides.
license:            BSD-3-Clause
author:             Nadeem Bitar
maintainer:         nadeem@gmail.com
copyright:          2026 Nadeem Bitar
category:           Control
build-type:         Simple
tested-with:        GHC == 9.12.*

common warnings
    ghc-options:        -Wall -Wcompat -Widentities
                        -Wincomplete-record-updates -Wincomplete-uni-patterns
                        -Wpartial-fields -Wredundant-constraints

common shared
    default-language:   GHC2024
    default-extensions: DeriveAnyClass
                        DuplicateRecordFields
                        BlockArguments
                        OverloadedLabels
                        OverloadedRecordDot
                        OverloadedStrings
                        PackageImports
                        QualifiedDo
                        TemplateHaskell

library
    import:             warnings, shared
    exposed-modules:    Jitsurei
                        Jitsurei.Database
                        Jitsurei.Diagrams
                        Jitsurei.Domain
                        Jitsurei.FulfillmentProcess
                        Jitsurei.OrderStream
                        Jitsurei.ReadModels
                        Jitsurei.Snapshots
                        Jitsurei.Timers
    hs-source-dirs:     src
    build-depends:      aeson >= 2.2,
                        base >= 4.21 && < 5,
                        contravariant-extras >= 0.3,
                        effectful >= 2.6,
                        effectful-core >= 2.6,
                        generic-lens >= 2.2,
                        hasql >= 1.10,
                        hasql-transaction >= 1.1,
                        keiki >= 0.1,
                        keiki-codec-json >= 0.1,
                        keiro,
                        kiroku-store >= 0.1,
                        lens >= 5.2,
                        mmzk-typeid >= 0.1,
                        text >= 2.1,
                        time >= 1.12,
                        uuid >= 1.3,
                        vector >= 0.13

executable jitsurei-demo
    import:             warnings, shared
    main-is:            Main.hs
    hs-source-dirs:     app
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base >= 4.21 && < 5,
                        jitsurei,
                        keiro,
                        kiroku-store,
                        shibuya-core,
                        streamly,
                        streamly-core,
                        text >= 2.1,
                        time >= 1.12,
                        vector >= 0.13

executable jitsurei-diagrams
    import:             warnings, shared
    main-is:            DiagramsMain.hs
    hs-source-dirs:     app
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base >= 4.21 && < 5,
                        jitsurei,
                        text >= 2.1

test-suite jitsurei-test
    import:             warnings, shared
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      aeson >= 2.2,
                        base >= 4.21 && < 5,
                        contravariant-extras >= 0.3,
                        effectful >= 2.6,
                        ephemeral-pg >= 0.2,
                        hasql >= 1.10,
                        hasql-transaction >= 1.1,
                        hspec >= 2.11,
                        jitsurei,
                        keiro,
                        kiroku-store,
                        lens >= 5.2,
                        mmzk-typeid >= 0.1,
                        text >= 2.1,
                        time >= 1.12,
                        uuid >= 1.3,
                        vector >= 0.13
