cabal-version: 3.0
name:          jitsurei
version:       0.1.0.0
synopsis:      Guide-backed worked examples for keiro
description:
  Real, compiling examples that back the long-form Keiro guides.

license:       BSD-3-Clause
author:        Nadeem Bitar
maintainer:    nadeem@gmail.com
copyright:     2026 Nadeem Bitar
category:      Control
homepage:      https://github.com/shinzui/keiro#readme
bug-reports:   https://github.com/shinzui/keiro/issues
build-type:    Simple
tested-with:   GHC >=9.12 && <9.13

source-repository head
  type:     git
  location: https://github.com/shinzui/keiro.git

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

common shared
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DuplicateRecordFields
    MultilineStrings
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    QualifiedDo
    TemplateHaskell

library
  import:          warnings, shared
  exposed-modules:
    Jitsurei
    Jitsurei.AgentQualRouter
    Jitsurei.Database
    Jitsurei.Diagrams
    Jitsurei.Domain
    Jitsurei.DurableWorkflow
    Jitsurei.EscalationProcess
    Jitsurei.FulfillmentProcess
    Jitsurei.Incident
    Jitsurei.OncallRoster
    Jitsurei.OrderStream
    Jitsurei.Paging
    Jitsurei.ReadModels
    Jitsurei.Snapshots
    Jitsurei.Timers

  hs-source-dirs:  src
  build-depends:
    , aeson                 >=2.2
    , base                  >=4.21 && <5
    , containers            >=0.6
    , contravariant-extras  >=0.3
    , effectful             >=2.6
    , effectful-core        >=2.6
    , generic-lens          >=2.2
    , hasql                 >=1.10
    , hasql-transaction     >=1.1
    , keiki                 >=0.3  && <0.4
    , keiki-codec-json      >=0.3  && <0.4
    , keiro
    , kiroku-store          >=0.3  && <0.4
    , lens                  >=5.2
    , mmzk-typeid           >=0.1
    , text                  >=2.1
    , time                  >=1.12
    , uuid                  >=1.3
    , vector                >=0.13

executable jitsurei-demo
  import:         warnings, shared
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson                             >=2.2
    , base                              >=4.21    && <5
    , effectful                         >=2.6
    , generic-lens                      >=2.2
    , hasql                             >=1.10
    , hasql-transaction                 >=1.1
    , hs-opentelemetry-api              >=1.0     && <1.1
    , hs-opentelemetry-exporter-handle  >=1.0     && <1.1
    , hs-opentelemetry-sdk              >=1.0     && <1.1
    , jitsurei
    , keiro
    , kiroku-store                      >=0.3     && <0.4
    , lens                              >=5.2
    , shibuya-core                      >=0.8.0.1 && <0.9
    , streamly
    , streamly-core
    , text                              >=2.1
    , time                              >=1.12
    , uuid                              >=1.3
    , vector                            >=0.13

executable jitsurei-diagrams
  import:         warnings, shared
  main-is:        DiagramsMain.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base      >=4.21 && <5
    , jitsurei
    , text      >=2.1

test-suite jitsurei-test
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson                 >=2.2
    , base                  >=4.21 && <5
    , contravariant-extras  >=0.3
    , effectful             >=2.6
    , hasql                 >=1.10
    , hasql-transaction     >=1.1
    , hspec                 >=2.11
    , jitsurei
    , keiro
    , keiro-test-support
    , kiroku-store          >=0.3  && <0.4
    , lens                  >=5.2
    , mmzk-typeid           >=0.1
    , text                  >=2.1
    , time                  >=1.12
    , uuid                  >=1.3
    , vector                >=0.13
