cabal-version:   3.0
name:            keiro-core
version:         0.3.0.0
synopsis:        Core contracts for Keiro packages
description:
  Stable stream, codec, event-stream, and integration-event contracts
  shared by Keiro packages.

license:         BSD-3-Clause
author:          Nadeem Bitar
maintainer:      nadeem@gmail.com
copyright:       2026 Nadeem Bitar
category:        Control
homepage:        https://github.com/shinzui/keiro#readme
bug-reports:     https://github.com/shinzui/keiro/issues
build-type:      Simple
tested-with:     GHC >=9.12 && <9.13
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/shinzui/keiro.git

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

common shared
  default-language:   GHC2024
  default-extensions:
    DeriveAnyClass
    DuplicateRecordFields
    MultilineStrings
    OverloadedLabels
    OverloadedStrings
    PackageImports

library
  import:          warnings, shared
  exposed-modules:
    Keiro.Codec
    Keiro.EventStream
    Keiro.EventStream.Validate
    Keiro.Integration.Event
    Keiro.Prelude
    Keiro.Schema
    Keiro.Snapshot.Policy
    Keiro.Stream

  hs-source-dirs:  src
  build-depends:
    , aeson         >=2.2
    , aeson-casing  >=0.2
    , base          >=4.21 && <5
    , bytestring    >=0.11
    , deepseq       >=1.5
    , generic-lens  >=2.2
    , keiki         >=0.2  && <0.3
    , kiroku-store  >=0.3  && <0.4
    , lens          >=5.2
    , scientific    >=0.3
    , text          >=2.1
    , time          >=1.12
    , uuid          >=1.3
