cabal-version: 3.0
name:          keiro-dsl
version:       0.1.0.0
synopsis:      Typed specification toolchain for keiro services
description:
  keiro-dsl is the toolchain over a typed `.kdsl` specification of a keiro
  service: a parser + checker + scaffolder + harness emitter. It emits the
  symbol-free deterministic layer plus typed holes, never a keiki symbolic
  operator (the firewall invariant).

license:       BSD-3-Clause
author:        Nadeem Bitar
maintainer:    nadeem@gmail.com
copyright:     2026 Nadeem Bitar
category:      Development
build-type:    Simple
tested-with:   GHC >=9.12 && <9.13

common warnings
  ghc-options: -Wall

common shared
  default-language:   GHC2024
  default-extensions:
    LambdaCase
    OverloadedStrings

library
  import:          warnings, shared
  hs-source-dirs:  src
  exposed-modules:
    Keiro.Dsl.Grammar
    Keiro.Dsl.Parser
    Keiro.Dsl.PrettyPrint
    Keiro.Dsl.Scaffold
    Keiro.Dsl.Validate

  build-depends:
    , base                >=4.21 && <5
    , containers          >=0.6
    , megaparsec          >=9.6
    , parser-combinators  >=1.3
    , prettyprinter       >=1.7
    , text                >=2.1

executable keiro-dsl
  import:         warnings, shared
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , base                  >=4.21 && <5
    , directory             >=1.3
    , filepath              >=1.4
    , keiro-dsl
    , optparse-applicative  >=0.18
    , text                  >=2.1

test-suite keiro-dsl-test
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base        >=4.21 && <5
    , containers  >=0.6
    , hspec       >=2.11
    , keiro-dsl
    , QuickCheck  >=2.14
    , text        >=2.1

-- Conformance: proves the scaffolded Generated modules plus a hand-filled
-- Holes.hs compile against keiki/keiro and that the filled transducer passes
-- keiki's validator and the codec round-trips. The Generated.* modules under
-- test/conformance/ are byte-identical to `keiro-dsl scaffold` output (pinned
-- by the scaffold-conformance test in keiro-dsl-test).
test-suite keiro-dsl-conformance
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/conformance
  main-is:        Main.hs
  other-modules:
    Generated.HospitalCapacity.Reservation.Codec
    Generated.HospitalCapacity.Reservation.Domain
    Generated.HospitalCapacity.Reservation.EventStream
    Generated.HospitalCapacity.Reservation.Projection
    HospitalCapacity.Reservation.Holes

  build-depends:
    , aeson  >=2.2
    , base   >=4.21 && <5
    , keiki  >=0.1
    , keiro
    , text   >=2.1
