cabal-version: 3.0
name:          keiro-dsl
version:       0.1.0.0
synopsis:      Typed specification toolchain for keiro services
description:
  keiro-dsl is the toolchain over a typed `.kdsl` specification of a keiro
  service: a parser + checker + scaffolder + harness emitter. It emits the
  symbol-free deterministic layer plus typed holes, never a keiki symbolic
  operator (the firewall invariant).

license:       BSD-3-Clause
author:        Nadeem Bitar
maintainer:    nadeem@gmail.com
copyright:     2026 Nadeem Bitar
category:      Development
build-type:    Simple
tested-with:   GHC >=9.12 && <9.13

common warnings
  ghc-options: -Wall

common shared
  default-language:   GHC2024
  default-extensions:
    LambdaCase
    OverloadedStrings

library
  import:          warnings, shared
  hs-source-dirs:  src
  exposed-modules:
    Keiro.Dsl.Diff
    Keiro.Dsl.Grammar
    Keiro.Dsl.Harness
    Keiro.Dsl.Parser
    Keiro.Dsl.PrettyPrint
    Keiro.Dsl.Scaffold
    Keiro.Dsl.Validate

  build-depends:
    , base                >=4.21 && <5
    , containers          >=0.6
    , megaparsec          >=9.6
    , parser-combinators  >=1.3
    , prettyprinter       >=1.7
    , text                >=2.1

executable keiro-dsl
  import:         warnings, shared
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , base                  >=4.21 && <5
    , directory             >=1.3
    , filepath              >=1.4
    , keiro-dsl
    , optparse-applicative  >=0.18
    , process               >=1.6
    , text                  >=2.1

test-suite keiro-dsl-test
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base        >=4.21 && <5
    , containers  >=0.6
    , hspec       >=2.11
    , keiro-dsl
    , QuickCheck  >=2.14
    , text        >=2.1

-- Conformance: proves the scaffolded Generated modules plus a hand-filled
-- Holes.hs compile against keiki/keiro and that the filled transducer passes
-- keiki's validator and the codec round-trips. The Generated.* modules under
-- test/conformance/ are byte-identical to `keiro-dsl scaffold` output (pinned
-- by the scaffold-conformance test in keiro-dsl-test).
test-suite keiro-dsl-conformance
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/conformance
  main-is:        Main.hs
  other-modules:
    Generated.HospitalCapacity.Reservation.Codec
    Generated.HospitalCapacity.Reservation.Domain
    Generated.HospitalCapacity.Reservation.EventStream
    Generated.HospitalCapacity.Reservation.Harness
    Generated.HospitalCapacity.Reservation.Projection
    HospitalCapacity.Reservation.Holes

  build-depends:
    , aeson  >=2.2
    , base   >=4.21 && <5
    , keiki  >=0.1
    , keiro
    , text   >=2.1

-- EP-7 cold-start: a fresh `subscription` aggregate authored from only the skill
-- notation, scaffolded + hand-filled, compiling against keiki/keiro with a green
-- spec-derived harness — proof the authoring loop closes on a non-corpus spec.
test-suite keiro-dsl-conformance-coldstart
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/conformance-coldstart
  main-is:        Main.hs
  other-modules:
    Billing.Subscription.Holes
    Generated.Billing.Subscription.Codec
    Generated.Billing.Subscription.Domain
    Generated.Billing.Subscription.EventStream
    Generated.Billing.Subscription.Harness
    Generated.Billing.Subscription.Projection

  build-depends:
    , aeson  >=2.2
    , base   >=4.21 && <5
    , keiki  >=0.1
    , keiro
    , text   >=2.1

-- Contract codec conformance (EP-4): the scaffolded self-contained contract
-- payload ADT + codec, compiled + round-tripped per event type.
test-suite keiro-dsl-conformance-contract
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/conformance-contract
  main-is:        Main.hs
  other-modules:  Generated.HospitalCapacity.Emergency.Contract
  build-depends:
    , aeson  >=2.2
    , base   >=4.21 && <5
    , text   >=2.1

-- EP-4 intake runtime conformance: the scaffolded Inbox disposition + dedupe
-- policy compiled against the LIVE Keiro.Inbox.Types (InboxResult / dedupe).
test-suite keiro-dsl-conformance-intake-runtime
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/conformance-intake-runtime
  main-is:        Main.hs
  other-modules:  Generated.HospitalCapacity.IncidentInbox.Inbox
  build-depends:
    , base   >=4.21 && <5
    , keiro

-- pgmq Job codec conformance (EP-5): the scaffolded self-contained Job payload
-- record + field->wire codec, compiled + round-tripped.
test-suite keiro-dsl-conformance-queue
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/conformance-queue
  main-is:        Main.hs
  other-modules:  Generated.HospitalCapacity.Reservation_work.Queue
  build-depends:
    , aeson  >=2.2
    , base   >=4.21 && <5
    , text   >=2.1

-- Workflow facts harness (EP-6): the scaffolded self-contained WorkflowFacts
-- module asserted against a hand-written expectation (mutation-pinnable).
test-suite keiro-dsl-conformance-workflow
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/conformance-workflow
  main-is:        Main.hs
  other-modules:
    Generated.HospitalCapacity.HospitalTransferReservation.WorkflowFacts

  build-depends:  base >=4.21 && <5

-- EP-3 process runtime conformance: the scaffolded Process module's
-- deterministic wiring (timer-request builder + fire disposition) compiled
-- against the LIVE keiro runtime (Keiro.Timer / Keiro.Command), not just text.
test-suite keiro-dsl-conformance-process-runtime
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/conformance-process-runtime
  main-is:        Main.hs
  other-modules:  Generated.HospitalCapacity.HospitalSurge.Process
  build-depends:
    , aeson  >=2.2
    , base   >=4.21 && <5
    , keiro
    , text   >=2.1
    , time   >=1.12
    , uuid   >=1.3

-- Process-manager facts harness (EP-3 M4): the self-contained, firewall-clean
-- ProcessHarness module scaffolded from hospital-surge.kdsl, compiled + run to
-- prove the scaffolder lowered the spec's deterministic process/timer decisions
-- faithfully. (The runtime-coupled Process/ProcessHoles modules are emitted to
-- disk but not in this component; their live conformance is the M5 step.)
test-suite keiro-dsl-conformance-process
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/conformance-process
  main-is:        Main.hs
  other-modules:  Generated.HospitalCapacity.HospitalSurge.ProcessHarness
  build-depends:
    , base  >=4.21 && <5
    , text  >=2.1

-- Conformance for the evolved (v2) Reservation aggregate: proves the scaffolded
-- Codec schemaVersion=2 + upcasters wiring compiles and that the filled upcaster
-- migrates a v1-tagged payload through the chain (the harness "upcaster wired"
-- assertion). These sources are raw `keiro-dsl scaffold` output of
-- reservation-v2.kdsl plus a hand-filled Holes.hs.
test-suite keiro-dsl-conformance-v2
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/conformance-v2
  main-is:        Main.hs
  other-modules:
    Generated.HospitalCapacity.Reservation.Codec
    Generated.HospitalCapacity.Reservation.Domain
    Generated.HospitalCapacity.Reservation.EventStream
    Generated.HospitalCapacity.Reservation.Harness
    Generated.HospitalCapacity.Reservation.Projection
    HospitalCapacity.Reservation.Holes

  build-depends:
    , aeson  >=2.2
    , base   >=4.21 && <5
    , keiki  >=0.1
    , keiro
    , text   >=2.1
